--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "server": "nodemon server/server"
   },
   "dependencies": {
     "core-js": "^3.1.2",
+    "express": "^4.17.1",
+    "nodemon": "^1.19.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuex": "^3.0.1"
