--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "server": "nodemon server/server"
   },
   "dependencies": {
+    "bulma": "^0.9.0",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.4",
     "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
+    "sass": "^1.26.10",
     "sequelize": "^5.21.7",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
@@ -30,7 +32,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "sequelize-cli": "^5.5.1",
     "vue-template-compiler": "^2.6.11"
