--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "infopult",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,8 +9,10 @@
     "server": "nodemon server/server"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.4",
