--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "konva": "^7.0.7",
     "nodemon": "^1.19.4",
     "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
     "sass": "^1.26.10",
     "sequelize": "^5.21.7",
     "vue": "^2.6.11",
+    "vue-konva": "^2.1.4",
     "vue-router": "^3.1.6",
     "vuex": "^3.3.0"
   },
